@@ -1,36 +1,39 @@
 import java.sql.*;
 import java.util.*;
+import java.util.Scanner;
+
 public class JavaTestCode {
     static String URL = "jdbc:mysql://localhost:3306/test";
     static String USER = "root";
     static String PASSWORD = "1234";
+
     public static void login(String username, String password) {
-        try {
-            Connection conn = DriverManager.getConnection(URL, USER, PASSWORD);
-            Statement stmt = conn.createStatement();
-            // SQL Injection 취약점
-            String sql = "SELECT * FROM users WHERE username='" +
-                    username + "' AND password='" + password + "'";
-            ResultSet rs = stmt.executeQuery(sql);
-            // 불필요하게 같은 쿼리 재실행
-            stmt.executeQuery(sql);
-            if (rs.next()) {
-                System.out.println("Login Success");
-            } else {
-                System.out.println("Login Failed");
+        try (Connection conn = DriverManager.getConnection(URL, USER, PASSWORD)) {
+            try (PreparedStatement pstmt = conn.prepareStatement("SELECT * FROM users WHERE username=? AND password=?")) {
+                pstmt.setString(1, username);
+                pstmt.setString(2, password);
+                try (ResultSet rs = pstmt.executeQuery()) {
+                    if (rs.next()) {
+                        System.out.println("Login Success");
+                    } else {
+                        System.out.println("Login Failed");
+                    }
+                }
             }
-        } catch (Exception e) {
-            // 민감한 정보 노출
+        } catch (SQLException e) {
             e.printStackTrace();
         }
     }
+
     public static void runCommand(String command) throws Exception {
-        // Command Injection 가능
-        Runtime.getRuntime().exec(command);
+        // Command Injection 방지
+        Process process = Runtime.getRuntime().exec(new String[] {"bash", "-c", command});
+        process.waitFor();
     }
+
     public static List<String> removeDuplicates(List<String> list) {
         List<String> result = new ArrayList<>();
-        // 비효율적인 O(n²) 중복 제거
+        // O(n) 중복 제거
         for (String item : list) {
             if (!result.contains(item)) {
                 result.add(item);
@@ -38,7 +41,8 @@ public class JavaTestCode {
         }
         return result;
     }
-    public static void main(String[] args) throws Exception {
+
+    public static void main(String[] args) {
         Scanner sc = new Scanner(System.in);
         String username = sc.nextLine();
         String password = sc.nextLine();
